# py_lab1

./: README.md  pyproject.toml  requirements.txt
src/: constants.py  main.py  rpn_calc.py
tests/: test.py  test_rpn.py
